--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "preshow:coverage": "npm run coverage",
     "show:coverage": "live-server coverage/lcov-report",
     "preshow:dist": "npm run build",
-    "show:dist": "http-server dist",
-    "serve_live": "live-server src"
+    "show:dist": "http-server dist"
   },
   "author": "coursar",
   "license": "MIT",
@@ -32,14 +31,13 @@
     "globals": "^15.0.0",
     "html-loader": "^5.0.0",
     "html-webpack-plugin": "^5.6.0",
-    "http-server": "^14.1.1",
     "jest": "^29.7.0",
-    "live-server": "^1.2.2",
     "mini-css-extract-plugin": "^2.9.0",
     "prettier": "^3.2.5",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4",
-    "webpack-merge": "^5.10.0"
+    "webpack-merge": "^5.10.0",
+    "http-server": "^14.1.1"
   }
 }
